--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,10 +25,11 @@ android {
         applicationId = "com.example.unithrift"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        minSdkVersion 23  // Explicitly set this to 23 or higher
+        targetSdkVersion 33  // Or your desired targetSdkVersion
+        versionCode 1
+        versionName "1.0"
+        
     }
 
     buildTypes {
