--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.2
+  cloud_firestore: ^5.4.5
+  collection: ^1.18.0
+  image_picker: ^0.8.6
+  firebase_storage: ^12.3.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
