--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^12.3.5
   intl: ^0.19.0
+  permission_handler: ^11.3.1
+  http: ^1.2.2
+
 
 dev_dependencies:
   flutter_test:
