--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -42,6 +43,9 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^12.3.5
   intl: ^0.19.0
+  carousel_slider: ^5.0.0
+  video_player: ^2.3.0
+  chewie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
