--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   intl: ^0.19.0
   permission_handler: ^11.3.1
   http: ^1.2.2
+  carousel_slider: ^5.0.0
+  video_player: ^2.3.0
+  chewie: ^1.3.0
 
 
 dev_dependencies:
