--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   chewie: ^1.3.0
   permission_handler: ^11.3.1
   http: ^1.2.2
+  file_picker: ^8.1.4
 
 dev_dependencies:
   flutter_test:
