--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,15 +40,24 @@ dependencies:
   firebase_auth: ^5.3.2
   cloud_firestore: ^5.4.5
   collection: ^1.18.0
-  image_picker: ^0.8.6
+  image_picker: ^1.1.2
   firebase_storage: ^12.3.5
-  intl: ^0.19.0
+  intl: ^0.20.1
   carousel_slider: ^5.0.0
-  video_player: ^2.3.0
+  video_player: ^2.9.2
   chewie: ^1.3.0
   permission_handler: ^11.3.1
   http: ^1.2.2
   file_picker: ^8.1.4
+  dotted_border: ^2.1.0
+  provider: ^6.1.2
+  cloudinary: ^1.2.0
+  flutter_dotenv: ^5.2.1
+  crypto: ^3.0.6
+  video_uploader: ^1.3.0
+  multi_image_picker_view: ^2.0.0
+  cloudinary_public: ^0.23.1
+
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +68,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
