--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   video_uploader: ^1.3.0
   multi_image_picker_view: ^2.0.0
   cloudinary_public: ^0.23.1
+  flutter_rating_bar: ^4.0.0
 
 
 dev_dependencies:
