--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.unithrift</string>
+	<string>com.yunneyi.unithrift</string>
 	<key>PROJECT_ID</key>
 	<string>unithrift-b2282</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:381941062209:ios:891a915865586af99484c0</string>
+	<string>1:381941062209:ios:900a92fafbe22ffc9484c0</string>
 </dict>
 </plist>
