--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   collection: ^1.18.0
   image_picker: ^1.1.2
   firebase_storage: ^12.3.5
-  intl: ^0.20.1
+  intl: ^0.19.0
   carousel_slider: ^5.0.0
   video_player: ^2.9.2
   chewie: ^1.3.0
@@ -60,7 +60,7 @@ dependencies:
   cloudinary_public: ^0.23.1
   flutter_rating_bar: ^4.0.0
   email_otp: ^3.0.2
-
+  syncfusion_flutter_datepicker: ^28.1.33
 
 dev_dependencies:
   flutter_test:
